--- a/src/main/resources/META-INF/resources/fruits.html
+++ b/src/main/resources/META-INF/resources/fruits.html
@@ -3,68 +3,69 @@
 <head>
     <meta charset="utf-8"/>
     <title>Fruit REST service</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/wingcss/0.1.8/wing.min.css"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/wingcss/0.1.8/wing.min.css" rel="stylesheet"/>
     <!-- Load AngularJS -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script type="text/javascript">
-      var app = angular.module("FruitManagement", []);
+        var app = angular.module("FruitManagement", []);
 
-      //Controller Part
-      app.controller("FruitManagementController", function ($scope, $http) {
+        //Controller Part
+        app.controller("FruitManagementController", function ($scope, $http) {
 
-        //Initialize page with default data which is blank in this example
-        $scope.fruits = [];
+            //Initialize page with default data which is blank in this example
+            $scope.fruits = [];
 
-        $scope.form = {
-          name: "",
-          description: ""
-        };
+            $scope.form = {
+                name: "",
+                description: ""
+            };
 
-        //Now load the data from server
-        _refreshPageData();
+            //Now load the data from server
+            _refreshPageData();
 
-        //HTTP POST methods for add fruits
-        $scope.add = function () {
-          var data = { "name": $scope.form.name, "description": $scope.form.description };
+            //HTTP POST methods for add fruits
+            $scope.add = function () {
+                var data = {"name": $scope.form.name, "description": $scope.form.description};
 
-          $http({
-            method: "POST",
-            url: '/fruits',
-            data: angular.toJson(data),
-            headers: {
-              'Content-Type': 'application/json'
+                $http({
+                    method: "POST",
+                    url: '/fruits',
+                    data: angular.toJson(data),
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                }).then(_success, _error);
+            };
+
+            /* Private Methods */
+
+            //HTTP GET- get all fruits collection
+            function _refreshPageData() {
+                $http({
+                    method: 'GET',
+                    url: '/fruits'
+                }).then(function successCallback(response) {
+                    $scope.fruits = response.data;
+                }, function errorCallback(response) {
+                    console.log(response.statusText);
+                });
             }
-          }).then(_success, _error);
-        };
 
-        /* Private Methods */
-        //HTTP GET- get all fruits collection
-        function _refreshPageData() {
-          $http({
-            method: 'GET',
-            url: '/fruits'
-          }).then(function successCallback(response) {
-            $scope.fruits = response.data;
-          }, function errorCallback(response) {
-            console.log(response.statusText);
-          });
-        }
+            function _success(response) {
+                _refreshPageData();
+                _clearForm();
+            }
 
-        function _success(response) {
-          _refreshPageData();
-          _clearForm();
-        }
+            function _error(response) {
+                alert(response.data.message || response.statusText);
+            }
 
-        function _error(response) {
-          alert(response.data.message || response.statusText);
-        }
-
-        //Clear the form
-        function _clearForm() {
-          $scope.form.name = "";
-          $scope.form.description = "";
-        }
-      });
+            //Clear the form
+            function _clearForm() {
+                $scope.form.name = "";
+                $scope.form.description = "";
+            }
+        });
     </script>
 </head>
 <body ng-app="FruitManagement" ng-controller="FruitManagementController">
@@ -75,10 +76,11 @@
     <h3>Add a fruit</h3>
     <form ng-submit="add()">
         <div class="row">
-            <div class="col-6"><input type="text" placeholder="Name" ng-model="form.name" size="60"/></div>
+            <div class="col-6"><input ng-model="form.name" placeholder="Name" size="60" type="text"/></div>
         </div>
         <div class="row">
-            <div class="col-6"><input type="text" placeholder="Description" ng-model="form.description" size="60"/></div>
+            <div class="col-6"><input ng-model="form.description" placeholder="Description" size="60" type="text"/>
+            </div>
         </div>
         <input type="submit" value="Save"/>
     </form>
